Include a reload button on not authorized message

--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -1,5 +1,8 @@
 <div class="alert alert-danger" ng-show="authenticationError">
 	You are not authorized to view this Company's files...
+        <button class="btn btn-warning btn-sm" type="button" onclick="window.location.reload()">
+          <span title="Retry" class="glyphicon glyphicon-refresh"></span>
+        </button>
 </div>
 <!--  		<div class="checkbox"> -->
 <!--  			<label for="termsCheckbox"> -->
