--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -1,20 +1,3 @@
-<div class="alert alert-danger" ng-show="authenticationError">
-	You are not authorized to view this Company's files...
-        <button class="btn btn-warning btn-sm" type="button" onclick="window.location.reload()">
-          <span title="Retry" class="glyphicon glyphicon-refresh"></span>
-        </button>
-</div>
-<!--  		<div class="checkbox"> -->
-<!--  			<label for="termsCheckbox"> -->
-<!--  				<input id="termsCheckbox" type="checkbox" disabled> -->
-<!--  				I acknowledge that there is currently no -->
-<!--  				charge for the use of the Media Library and that at an as of yet to -->
-<!--  				be determined date in the future, there will be a cost and at that -->
-<!--  				time I will have 30 days to decide if I wish to continue using this -->
-<!--  				Media Library or not. -->
-<!--  			</label> -->
-<!--  		</div> -->
-
 <div class="row">
 	<div class="col-md-12">
 		There is currently no charge for the use of Storage, however at an as of yet to be 
@@ -99,19 +82,10 @@
 				<input type="hidden" name="policy" ng-value="policyBase64">
 				<input type="hidden" name="signature" ng-value="signature">
 				<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
-				<input type="file" name="file" id="file" onchange="angular.element(this).scope().filesSelected(this)"/>
+				<input type="file" name="file" id="file" onchange="angular.element(this).scope().uploadFile(this)"/>
 			</form>
 			<iframe id="uploadcompleteframe" name="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
 		</div>
 	</div>
-<!--
-			<div>
-				<div class="progress progress-striped active" ng-controller="ProgressController">
-  				<div class="progress-bar"  role="progressbar" aria-valuenow="{{uploadProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{uploadProgress}}%">
-    				<span class="sr-only">{{uploadProgress}}% Complete</span>
-  				</div>
-				</div>
-			</div>
-		-->
 <!--Body content-->
 <div ng-include="'partials/file-items.html'"></div>
