Differentiate between access failures
There are now different ui behaviours between a user's lack of access to
a particular bucket vs an oauth failure.

Oauth failures prompt for another permission grant request

Bucket failures have no resolution method in this module.
The reload button is gone since it isn't going to solve a bucket failure
issue.

--- a/web/partials/file-items.html
+++ b/web/partials/file-items.html
@@ -9,11 +9,8 @@
                         class="glyphicon glyphicon-log-in"> Initiate Request</span>
                 </button>
         </div>
-        <div class="alert alert-danger" ng-show="authenticationError">
+        <div class="alert alert-danger" ng-show="noCompanyAccess">
                 You are not authorized to view this Company's files...
-                <button class="btn btn-warning btn-sm" type="button" onclick="window.location.reload()">
-                  <span title="Retry" class="glyphicon glyphicon-refresh"></span>
-                </button>
         </div>
 	<table class="table table-hover">
 		<thead>
